--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -1,22 +1,23 @@
 {% extends 'knp_menu.html.twig' %}
 
 {% block list %}
-{#    {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}#}
-{#        {% import _self as knp_menu %}#}
-{#        <div class="navigation">#}
-{#            <nav class="container">#}
-{#            <div id="header" class="navigation__header okayNav-header">#}
-{#                    <nav role="navigation" id="nav-main" class="okayNav">#}
-{#                        <ul>#}
-{#                    {{ block('children') }}#}
-{#                        </ul>#}
-{#                    </nav>#}
-{#                </div><!-- /header -->#}
-{#            </nav>#}
-{#        </div>#}
+    {#    {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}#}
+    {#        {% import _self as knp_menu %}#}
+    {#        <div class="navigation">#}
+    {#            <nav class="container">#}
+    {#            <div id="header" class="navigation__header okayNav-header">#}
+    {#                    <nav role="navigation" id="nav-main" class="okayNav">#}
+    {#                        <ul>#}
+    {#                    {{ block('children') }}#}
+    {#                        </ul>#}
+    {#                    </nav>#}
+    {#                </div><!-- /header -->#}
+    {#            </nav>#}
+    {#        </div>#}
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top py-1">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample08"
+                aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -25,25 +26,51 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="#">navmenu </a>
                 </li>
-
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">navmenu </a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">navmenu </a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">navmenu </a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">navmenu </a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">navmenu </a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">navmenu </a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">navmenu </a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">navmenu </a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">navmenu </a>
+                </li>
             </ul>
         </div>
     </nav>
 
-{#    <nav class="site-header sticky-top py-1">#}
-{#        <div class="container d-flex flex-column flex-md-row justify-content-between" id="navbarsExample08">#}
-{#            <a class="py-2" href="#">#}
-{#                Bild Der Frau#}
-{#            </a>#}
-{#            <a class="py-2 d-none d-md-inline-block" href="#">Tour</a>#}
-{#            <a class="py-2 d-none d-md-inline-block" href="#">Product</a>#}
-{#            <a class="py-2 d-none d-md-inline-block" href="#">Features</a>#}
-{#            <a class="py-2 d-none d-md-inline-block" href="#">Enterprise</a>#}
-{#            <a class="py-2 d-none d-md-inline-block" href="#">Support</a>#}
-{#            <a class="py-2 d-none d-md-inline-block" href="#">Pricing</a>#}
-{#            <a class="py-2 d-none d-md-inline-block" href="#">Cart</a>#}
-{#        </div>#}
-{#    </nav>#}
+    {#    <nav class="site-header sticky-top py-1">#}
+    {#        <div class="container d-flex flex-column flex-md-row justify-content-between" id="navbarsExample08">#}
+    {#            <a class="py-2" href="#">#}
+    {#                Bild Der Frau#}
+    {#            </a>#}
+    {#            <a class="py-2 d-none d-md-inline-block" href="#">Tour</a>#}
+    {#            <a class="py-2 d-none d-md-inline-block" href="#">Product</a>#}
+    {#            <a class="py-2 d-none d-md-inline-block" href="#">Features</a>#}
+    {#            <a class="py-2 d-none d-md-inline-block" href="#">Enterprise</a>#}
+    {#            <a class="py-2 d-none d-md-inline-block" href="#">Support</a>#}
+    {#            <a class="py-2 d-none d-md-inline-block" href="#">Pricing</a>#}
+    {#            <a class="py-2 d-none d-md-inline-block" href="#">Cart</a>#}
+    {#        </div>#}
+    {#    </nav>#}
 
-{#    {% endif %}#}
+    {#    {% endif %}#}
 {% endblock %}
