--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -24,35 +24,9 @@
         <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">navmenu </a>
+                    <a class="nav-link" href="#">{{ block('children') }} </a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">navmenu </a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">navmenu </a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">navmenu </a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">navmenu </a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">navmenu </a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">navmenu </a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">navmenu </a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">navmenu </a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">navmenu </a>
-                </li>
+                
             </ul>
         </div>
     </nav>
