--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -15,6 +15,8 @@
     {#            </nav>#}
     {#        </div>#}
 
+    <div class="row">
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top py-1">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample08"
                 aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,6 +58,7 @@
             </ul>
         </div>
     </nav>
+    </div>
 
     {#    <nav class="site-header sticky-top py-1">#}
     {#        <div class="container d-flex flex-column flex-md-row justify-content-between" id="navbarsExample08">#}
