--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -16,79 +16,23 @@
     {#        </div>#}
 
 
-    <div class="container my-0">
-
-        <div class="d-flex row justify-content-between pb-3">
-            <div class="d-none d-sm-block col-2 p-0">
 
 
 
-                <div class="row">
-
-                    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top py-1">
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample08"
-                                aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-
-                        <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
-                            <ul class="navbar-nav">
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="#">navmenu </a>
-                                </li>
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="#">navmenu </a>
-                                </li>
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="#">navmenu </a>
-                                </li>
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="#">navmenu </a>
-                                </li>
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="#">navmenu </a>
-                                </li>
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="#">navmenu </a>
-                                </li>
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="#">navmenu </a>
-                                </li>
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="#">navmenu </a>
-                                </li>
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="#">navmenu </a>
-                                </li>
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="#">navmenu </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </nav>
-                </div>
-
-
-
-        </div>
-
-    </div>
-
-
-    {#    <nav class="site-header sticky-top py-1">#}
-    {#        <div class="container d-flex flex-column flex-md-row justify-content-between" id="navbarsExample08">#}
-    {#            <a class="py-2" href="#">#}
-    {#                Bild Der Frau#}
-    {#            </a>#}
-    {#            <a class="py-2 d-none d-md-inline-block" href="#">Tour</a>#}
-    {#            <a class="py-2 d-none d-md-inline-block" href="#">Product</a>#}
-    {#            <a class="py-2 d-none d-md-inline-block" href="#">Features</a>#}
-    {#            <a class="py-2 d-none d-md-inline-block" href="#">Enterprise</a>#}
-    {#            <a class="py-2 d-none d-md-inline-block" href="#">Support</a>#}
-    {#            <a class="py-2 d-none d-md-inline-block" href="#">Pricing</a>#}
-    {#            <a class="py-2 d-none d-md-inline-block" href="#">Cart</a>#}
-    {#        </div>#}
-    {#    </nav>#}
+        <nav class="site-header sticky-top py-1">
+            <div class="container d-flex flex-column flex-md-row justify-content-between" id="navbarsExample08">
+                <a class="py-2" href="#">
+                    Bild Der Frau
+                </a>
+                <a class="py-2 d-none d-md-inline-block" href="#">Tour</a>
+                <a class="py-2 d-none d-md-inline-block" href="#">Product</a>
+                <a class="py-2 d-none d-md-inline-block" href="#">Features</a>
+                <a class="py-2 d-none d-md-inline-block" href="#">Enterprise</a>
+                <a class="py-2 d-none d-md-inline-block" href="#">Support</a>
+                <a class="py-2 d-none d-md-inline-block" href="#">Pricing</a>
+                <a class="py-2 d-none d-md-inline-block" href="#">Cart</a>
+            </div>
+        </nav>
 
     {#    {% endif %}#}
 {% endblock %}
