--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -21,9 +21,9 @@
 
         <nav class="site-header sticky-top py-1">
             <div class="container d-flex flex-column flex-md-row justify-content-between" id="navbarsExample08">
-                <a class="py-2" href="#">
-                    Bild Der Frau
-                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
                 <a class="py-2 d-none d-md-inline-block" href="#">Tour</a>
                 <a class="py-2 d-none d-md-inline-block" href="#">Product</a>
                 <a class="py-2 d-none d-md-inline-block" href="#">Features</a>
