--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -27,11 +27,11 @@
 
         <nav class="navigation__nav">
             <ul class="navigation__list">
-                <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Natous</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About BF</a></li>
                 <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your benfits</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular tours</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular Frauen</a></li>
                 <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Book now</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Subscribe now</a></li>
             </ul>
         </nav>
     </div>
@@ -97,7 +97,7 @@
             position: fixed;
             top: 6.5rem;
             right: 6.5rem;
-            background-image: radial-gradient(#7ed56f, #28b485);
+            background-image: radial-gradient(#ff7730, #CE0001);
             z-index: 1000;
             -webkit-transition: -webkit-transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
             transition: -webkit-transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
@@ -167,7 +167,7 @@
 
         .navigation__link:hover, .navigation__link:active {
             background-position: 100%;
-            color: #55c57a;
+            color: #ff7730;
             -webkit-transform: translateX(1rem);
             transform: translateX(1rem)
         }
