--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -1,19 +1,19 @@
 {% extends 'knp_menu.html.twig' %}
 
 {% block list %}
-    {#    {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}#}
-    {#        {% import _self as knp_menu %}#}
-    {#        <div class="navigation">#}
-    {#            <nav class="container">#}
-    {#            <div id="header" class="navigation__header okayNav-header">#}
-    {#                    <nav role="navigation" id="nav-main" class="okayNav">#}
-    {#                        <ul>#}
-    {#                    {{ block('children') }}#}
-    {#                        </ul>#}
-    {#                    </nav>#}
-    {#                </div><!-- /header -->#}
-    {#            </nav>#}
-    {#        </div>#}
+        {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}
+            {% import _self as knp_menu %}
+            <div class="navigation">
+                <nav class="container">
+                <div id="header" class="navigation__header okayNav-header">
+                        <nav role="navigation" id="nav-main" class="okayNav">
+                            <ul>
+                        {{ block('children') }}
+                            </ul>
+                        </nav>
+                    </div><!-- /header -->
+                </nav>
+            </div>
 
 
     <div class="navigation">
@@ -39,19 +39,19 @@
 
 
 
-    <nav class="site-header sticky-top py-1">
-        <div class="container d-flex flex-column flex-md-row justify-content-between">
-            <a class="py-2 d-none d-md-inline-block" href="#">Tour</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Product</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Features</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Enterprise</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Support</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Pricing</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Cart</a>
-        </div>
-    </nav>
+{#    <nav class="site-header sticky-top py-1">#}
+{#        <div class="container d-flex flex-column flex-md-row justify-content-between">#}
+{#            <a class="py-2 d-none d-md-inline-block" href="#">Tour</a>#}
+{#            <a class="py-2 d-none d-md-inline-block" href="#">Product</a>#}
+{#            <a class="py-2 d-none d-md-inline-block" href="#">Features</a>#}
+{#            <a class="py-2 d-none d-md-inline-block" href="#">Enterprise</a>#}
+{#            <a class="py-2 d-none d-md-inline-block" href="#">Support</a>#}
+{#            <a class="py-2 d-none d-md-inline-block" href="#">Pricing</a>#}
+{#            <a class="py-2 d-none d-md-inline-block" href="#">Cart</a>#}
+{#        </div>#}
+{#    </nav>#}
 
-    {#    {% endif %}#}
+        {% endif %}
 
 
     <style>
