--- a/views/partials/articleGrid__item.html.twig
+++ b/views/partials/articleGrid__item.html.twig
@@ -13,7 +13,7 @@
     {% endgimme %}
   {% endgimmelist %}
 {% else %}
-  {% set rend610 = 'public/img/bilderfrau.jpeg' %}
+  {% set rend610 = 'public/img/376x235-bf.jpeg' %}
 {% endif %}
 <article class="articleGrid__item {{ class }}">
   <a class="articleGrid__image articleGrid__image--smallMobile" href="{{ url(article) }}">
