--- a/views/partials/mainArticleSection.html.twig
+++ b/views/partials/mainArticleSection.html.twig
@@ -31,8 +31,8 @@
                 {% endgimme %}
               {% endgimmelist %}
             {% else %}
-                    {% set rend610 = 'public/img/bilderfrau.jpeg' %}
-                    {% set rend1250 = 'public/img/bilderfrau.jpeg' %}
+                    {% set rend610 = 'public/img/376x235-bf.jpeg' %}
+                    {% set rend1250 = 'public/img/780x460-bf.jpeg' %}
             {% endif %}              
 
             <a href="{{ url(article) }}">
