--- a/views/partials/mainArticle.html.twig
+++ b/views/partials/mainArticle.html.twig
@@ -21,8 +21,8 @@
       {% endgimme %}
     {% endgimmelist %}
     {% else %}
-      {% set rend610 = 'public/img/376x235-bf.jpeg' %}
-      {% set rend1250 = 'public/img/780x460-bf.jpeg' %}
+      {% set rend610 = 'public/img/376x235-bf.jpg' %}
+      {% set rend1250 = 'public/img/780x460-bf.jpg' %}
   {% endif %}
 
               <a href="{{ url(article) }}">
