--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -59,6 +59,10 @@
 
     <style>
 
+        .boo {
+            position: relative;
+        }
+
         .sticky-top {
             z-index: 800;
         }
@@ -71,7 +75,8 @@
             background-color: #fff;
             height: 7rem;
             width: 7rem;
-            position: fixed;
+            /*position: fixed;*/
+            position: sticky;
             top: 6rem;
             right: 6rem;
             border-radius: 50%;
@@ -100,7 +105,8 @@
             height: 6rem;
             width: 6rem;
             border-radius: 50%;
-            position: fixed;
+            /*position: fixed;*/
+            position: sticky;
             top: 6.5rem;
             right: 6.5rem;
             background-image: radial-gradient(#ff7730, #CE0001);
