--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -76,7 +76,7 @@
             height: 7rem;
             width: 7rem;
             /*position: fixed;*/
-            position: sticky;
+            position: absolute;
             top: 6rem;
             right: 6rem;
             border-radius: 50%;
@@ -106,7 +106,7 @@
             width: 6rem;
             border-radius: 50%;
             /*position: fixed;*/
-            position: sticky;
+            position: absolute;
             top: 6.5rem;
             right: 6.5rem;
             background-image: radial-gradient(#ff7730, #CE0001);
@@ -133,7 +133,8 @@
 
         .navigation__nav {
             height: 100vh;
-            position: fixed;
+            /*position: fixed;*/
+            position: absolute;
             top: 0;
             left: 0;
             z-index: 1500;
