--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -77,8 +77,8 @@
             width: 7rem;
             /*position: fixed;*/
             position: absolute;
-            top: 6rem;
-            right: 6rem;
+            /*top: 6rem;*/
+            /*right: 6rem;*/
             border-radius: 50%;
             z-index: 2000;
             -webkit-box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
@@ -102,8 +102,8 @@
         }
 
         .navigation__background {
-            height: 6rem;
-            width: 6rem;
+            /*height: 6rem;*/
+            /*width: 6rem;*/
             border-radius: 50%;
             /*position: fixed;*/
             position: absolute;
