--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -77,8 +77,8 @@
             width: 7rem;
             /*position: fixed;*/
             position: absolute;
-            top: 6rem;
-            right: 6rem;
+            /*top: 6rem;*/
+            /*right: 6rem;*/
             border-radius: 50%;
             z-index: 2000;
             -webkit-box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
@@ -107,8 +107,8 @@
             border-radius: 50%;
             /*position: fixed;*/
             position: absolute;
-            top: 6.5rem;
-            right: 6.5rem;
+            /*top: 6.5rem;*/
+            /*right: 6.5rem;*/
             background-image: radial-gradient(#ff7730, #CE0001);
             z-index: 1000;
             -webkit-transition: -webkit-transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
