--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -79,7 +79,7 @@
             position: absolute;
             /*top: 6rem;*/
             /*right: 6rem;*/
-            border-radius: 50%;
+            /*border-radius: 50%;*/
             z-index: 2000;
             -webkit-box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
             box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
@@ -104,7 +104,7 @@
         .navigation__background {
             height: 6rem;
             width: 6rem;
-            border-radius: 50%;
+            /*border-radius: 50%;*/
             /*position: fixed;*/
             position: absolute;
             /*top: 6.5rem;*/
