--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -56,6 +56,13 @@
 
     <style>
 
+        .site-header{
+            z-index: 800;
+        }
+
+        .navigation__list{
+            display: grid;
+        }
 
         .navigation__checkbox {
             display: none
