--- a/views/article.html.twig
+++ b/views/article.html.twig
@@ -66,6 +66,7 @@
 					{% set imgCaption = gimme.article.featureMedia.description %}
 				{% endgimme %}
 			{% else %}
+			<div>goes in the else</div>
       	{% set rend1250 = 'public/img/780x460-bf.jpg' %}
 			{% endif %}
 
