--- a/views/partials/mainArticleList.html.twig
+++ b/views/partials/mainArticleList.html.twig
@@ -23,9 +23,11 @@
 
               <a href="{{ url(article) }}">
                 {% if image=='small' %}
-                  <img src="{{ rend610 }}" alt="{{ imgCaption }}"  }}">
+                <div>1</div>
+                  <img src=`"{{ rend610 }}" alt="{{ imgCaption }}"  }}`>
                 {% else %}
-                  <img src="{{ rend1250 }}" alt="{{ imgCaption }}" }}">
+                <div>2</div>
+                  <img src=`"{{ rend1250 }}" alt="{{ imgCaption }}" }}`>
                 {% endif %}
               </a>
 
