--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -1,21 +1,21 @@
 {% extends 'knp_menu.html.twig' %}
 
 {% block list %}
-    {#    {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}#}
-    {#        {% import _self as knp_menu %}#}
-    {#        <div class="navigation">#}
-    {#            <nav class="container">#}
-    {#            <div id="header" class="navigation__header okayNav-header">#}
-    {#                    <nav role="navigation" id="nav-main" class="okayNav">#}
-    {#                        <ul>#}
-    {#                    {{ block('children') }}#}
-    {#                        </ul>#}
-    {#                    </nav>#}
-    {#                </div><!-- /header -->#}
-    {#            </nav>#}
-    {#        </div>#}
+       {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}#}
+           {% import _self as knp_menu %}
+           <div class="navigation">
+                  <nav class="container">
+                  <div id="header" class="navigation__header okayNav-header">
+                          <nav role="navigation" id="nav-main" class="okayNav">
+                              <ul>
+                          {{ block('children') }}
+                             </ul>
+                          </nav>
+                      </div><!-- /header -->
+                  </nav>
+              </div>
 
-
+{# 
     <div class="navigation" >
         <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
 
@@ -34,7 +34,7 @@
                 <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Subscribe now</a></li>
             </ul>
         </nav>
-    </div>
+    </div> #}
 
 
 
