--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -1,22 +1,22 @@
 {% extends 'knp_menu.html.twig' %}
 
 {% block list %}
-       {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}#}
-           {% import _self as knp_menu %}
-           <div class="navigation">
+          {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}#}
+              {% import _self as knp_menu %}
+              <div class="navigation">
                   <nav class="container">
                   <div id="header" class="navigation__header okayNav-header">
                           <nav role="navigation" id="nav-main" class="okayNav">
                               <ul>
                           {{ block('children') }}
-                             </ul>
+                              </ul>
                           </nav>
                       </div><!-- /header -->
                   </nav>
               </div>
 
-{# 
-    <div class="navigation" >
+
+    {# <div class="navigation" >
         <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
 
         <label for="navi-toggle" class="navigation__button">
@@ -34,7 +34,7 @@
                 <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Subscribe now</a></li>
             </ul>
         </nav>
-    </div> #}
+    </div>
 
 
 
@@ -51,7 +51,7 @@
             </div>
         </nav>
 
-    {#    {% endif %}#}
+        {% endif %}
 
 
     <style>
@@ -243,4 +243,4 @@
 
     </style>
 
-{% endblock %}
+{% endblock %} #}
